add the relevant en doc

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -22,7 +22,7 @@
 
 ## 用法及使用场景
 
-### FETCH PROP ON 查询属性
+### FETCH PROP ON
 
 **用法**：用于获取指定点或边的属性。
 
@@ -50,7 +50,7 @@ FETCH PROP ON player "player100" YIELD properties(vertex);
 
 更多信息，请参见[FETCH PROP ON](4.fetch.md)。
 
-### LOOKUP ON 查询 ID
+### LOOKUP ON
 
 **用法**：用于基于索引查询点或边 ID。
 
@@ -78,7 +78,7 @@ LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
 
 更多信息，请参见[LOOKUP ON](5.lookup.md)。
 
-### GO 基于点的图遍历
+### GO
 
 **用法**：用于基于给定的点进行图遍历，按需返回起始点、边或目标点的信息。可以指定遍历的深度、边的类型、方向等。
 
@@ -108,7 +108,7 @@ GO 3 STEPS FROM "player102" OVER follow YIELD dst(edge);
 
 更多信息，请参见[GO](3.go.md)。
 
-### MATCH 基于图的模式匹配
+### MATCH
 
 **用法**：用于执行复杂的[图模式](../1.nGQL-overview/3.graph-patterns.md)匹配查询。
 
@@ -135,8 +135,7 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
 
 更多信息，请参见[MATCH](2.match.md)。
 
-
-### FIND PATH 路径查询
+### FIND PATH 
 
 **用法**：用于查询给定的起始点和目标点之间的所有路径；或者查询路径中的点和边的属性时使用。
 
@@ -163,7 +162,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 
 更多信息，请参见[FIND PATH](6.find-path.md)。
 
-### GET SUBGRAPH 子图查询
+### GET SUBGRAPH
 
 **用法**：提取满足特定条件的图的一部分；查询子图中的点和边的属性。
 
@@ -186,7 +185,7 @@ GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relation
 
 更多信息，请参见[GET SUBGRAPH](7.get-subgraph.md)。
 
-### SHOW 查询元数据
+### SHOW
 
 SHOW 语句主要用于获取数据库的元数据信息，而不是用于获取存储在数据库中的实际数据内容。这类语句通常用于查询数据库的结构和配置，如查看现有的图空间、标签、边类型、索引等。
 
