--- a/docs-2.0-en/2.quick-start/6.cheatsheet-for-ngql.md
+++ b/docs-2.0-en/2.quick-start/6.cheatsheet-for-ngql.md
@@ -453,3 +453,10 @@
   | Syntax                                                | Example                                            | Description                                         |
   | --------------------------------------------------- | ----------------------------------------------- | -------------------------------------------- |
   | `KILL QUERY (session=<session_id>, plan=<plan_id>)` | `KILL QUERY(SESSION=1625553545984255,PLAN=163)` | Terminates the query being executed, and is often used to terminate slow queries. |
+
+* [Kill sessions](../3.ngql-guide/17.query-tuning-statements/2.kill-session.md)
+  | Syntax                                                | Example                                            | Description                                         |
+  | ------------------------------------------------------ | --------------------------------------------------- | --------------------------------------------------- |
+  | `KILL {SESSION|SESSIONS} <SessionId>`                   | `KILL SESSION 1672887983842984`                     | Terminates a single session.                         |
+  | `SHOW SESSIONS | YIELD $-.SessionId AS sid [WHERE <filter_clause>] | KILL {SESSION|SESSIONS} $-.sid`                    | `SHOW SESSIONS | YIELD $-.SessionId AS sid, $-.CreateTime as CreateTime | ORDER BY $-.CreateTime ASC | LIMIT 2 | KILL SESSIONS $-.sid` | Terminates multiple sessions based on specified criteria. |
+  | `SHOW SESSIONS | KILL SESSIONS $-.SessionId`               | `SHOW SESSIONS | KILL SESSIONS $-.SessionId`              | Terminates all sessions.                             |
