--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -1,6 +1,6 @@
 # Overview of NebulaGraph general query statements
 
-This topic provides an overview of the general categories of query statements in NebulaGraph and their Use cases.
+This topic provides an overview of the general categories of query statements in NebulaGraph and outlines their use cases.
 
 ## Background
 
@@ -131,7 +131,7 @@ For more information, see [MATCH](2.match.md).
 
 ### FIND PATH
 
-**Usage:** Query paths between given start and target vertices or querying properties of vertices and edges along paths.
+**Usage:** Query paths between given start and target vertices or query properties of vertices and edges along paths.
 
 **Use case:** Querying paths between two vertices.
 
@@ -158,7 +158,7 @@ For more information, see [FIND PATH](6.find-path.md).
 
 ### GET SUBGRAPH
 
-**Usage:** Extract a portion of the graph that satisfies specific conditions and query properties of vertices and edges in the subgraph.
+**Usage:** Extract a portion of the graph that satisfies specific conditions or query properties of vertices and edges in the subgraph.
 
 **Use case:** Analyzing structures of the graph or specific regions, such as extracting the social network subgraph of a person or the transportation network subgraph of an area.
 
