--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -31,7 +31,7 @@ The primary query statements in NebulaGraph fall into the following categories:
 **Note:**
 
 - Must specify the ID of the vertex or edge.
-- Must specify the tag or edge type of the vertex or edge.
+- Must specify the tag of the vertex or the edge type of the edge.
 - Must use the `YIELD` clause to specify the returned properties.
 
 **Example:**
