--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -58,7 +58,7 @@ For more information, see [FETCH PROP ON](4.fetch.md).
 
 **Note:**
 - Must pre-define indexes for the tag, edge type, or property.
-- Must specify the tag or edge type of the vertex or edge.
+- Must specify the tag of the vertex or the edge type of the edge.
 - Must use the `YIELD` clause to specify the returned IDs.
 
 **Example:**
