--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -109,7 +109,7 @@ For more information, see [GO](3.go.md).
 
 **Usage:** Execute complex [graph pattern](../1.nGQL-overview/3.graph-patterns.md) matching queries.
 
-**Use case:** Complex graph pattern matching is required, such as finding combinations of vertices and edges that satisfy a specific pattern.
+**Use case:** Complex graph pattern matching, such as finding combinations of vertices and edges that satisfy a specific pattern.
 
 **Note:**
 
@@ -131,7 +131,7 @@ For more information, see [MATCH](2.match.md).
 
 ### FIND PATH
 
-**Usage:** Query paths between given start and target vertices or query properties of vertices and edges along paths.
+**Usage:** Query paths between given starting and target vertices or query properties of vertices and edges along paths.
 
 **Use case:** Querying paths between two vertices.
 
@@ -147,7 +147,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
        │           │     │                                        │
        │           │     └Travels outwards via all types of edges └────　Returns the path as 'p'
        │           │                                              
-       │           └──────From the given start and target VIDs            
+       │           └──────From the given starting and target VIDs            
        │                                                   
        │    
        │                                                    
@@ -208,7 +208,7 @@ For more information, see [GET SUBGRAPH](7.get-subgraph.md).
 
 Query statements in NebulaGraph can be combined to achieve more complex queries.
 
-When referencing the results of a subquery in a compound statement, you need to alias the result and use the [pipe symbol](../5.operators/4.pipe.md)(`|`) to pass it to the next subquery. Use `$-` in the next subquery to reference the alias of that result. See [Pipe Symbol](../5.operators/4.pipe.md) for details.
+When referencing the results of a subquery in a compound statement, you need to create an alias for the result and use the [pipe symbol](../5.operators/4.pipe.md)(`|`) to pass it to the next subquery. Use `$-` in the next subquery to reference the alias of that result. See [Pipe Symbol](../5.operators/4.pipe.md) for details.
 
 Example:
 
