--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -247,4 +247,4 @@ nebula> MATCH (v:player)-->(v2:player) \
 
 ## More information
 
-[nGQL command cheatsheet](../../2.quick-start/6.cheatsheet-for-ngql-command.md)
+[nGQL command cheatsheet](../../2.quick-start/6.cheatsheet-for-ngql.md)
