--- a/docs-2.0-zh/3.ngql-guide/10.tag-statements/1.create-tag.md
+++ b/docs-2.0-zh/3.ngql-guide/10.tag-statements/1.create-tag.md
@@ -34,7 +34,7 @@ CREATE TAG [IF NOT EXISTS] <tag_name>
 |`<tag_name>`|1、每个图空间内的 Tag 必须是唯一的。<br>2、Tag 名称设置后无法修改。<br>3、默认情况下，仅支持 1~4 字节的 UTF-8 编码字符，包括英文字母（区分大小写）、数字、中文等，但是特殊字符只能使用下划线。不能以数字开头。<br>4、如果需要使用特殊字符、保留关键字或者以数字开头，请使用反引号（\`）包围整个名称。反引号中不能包含英文句号（`.`）。详情参见[关键字和保留字](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md)。<br/>**注意**：如果以中文命名 Tag，报`SyntaxError`错误时，需使用反引号（\`）包围中文字符。|
 |`<prop_name>`|属性名称。每个 Tag 中的属性名称必须唯一。属性的命名规则与 Tag 相同。|
 |`<data_type>`|属性的数据类型，目前支持[数值](../3.data-types/1.numeric.md)、[布尔](../3.data-types/2.boolean.md)、[字符串](../3.data-types/3.string.md)以及[日期与时间](../3.data-types/4.date-and-time.md)。|
-|`NULL \| NOT NULL`|指定属性值是否支持为`NULL`。默认值为`NULL`。指定`NOT NULL`且没有指定`DEFAULT`值时，插入数据必须指定值；同时指定`NOT NULL`和`DEFAULT`值时，插入数据如果没有指定值，则默认插入`DEFAULT`值。| 
+|`NULL | NOT NULL`|指定属性值是否支持为`NULL`。默认值为`NULL`。指定`NOT NULL`且没有指定`DEFAULT`值时，插入数据必须指定值；同时指定`NOT NULL`和`DEFAULT`值时，插入数据如果没有指定值，则默认插入`DEFAULT`值。| 
 |`DEFAULT`|指定属性的默认值。默认值可以是一个文字值或 {{nebula.name}} 支持的表达式。如果插入点时没有指定某个属性的值，则使用默认值。|
 |`COMMENT`|对单个属性或 Tag 的描述。最大为 256 字节。默认无描述。|
 |`TTL_DURATION`|指定时间戳差值，单位：秒。时间戳差值必须为 64 位非负整数。属性值和时间戳差值之和如果小于当前时间戳，属性就会过期。默认值为`0`，表示属性永不过期。|
