reorg operator in 3.5.0-sc

--- a/docs-2.0/20.appendix/0.FAQ.md
+++ b/docs-2.0/20.appendix/0.FAQ.md
@@ -383,7 +383,7 @@ You also need to run [Balance Data and Balance leader](../8.service-tuning/load-
  {{ent.ent_begin}}
 You can scale Graph and Storage services with Dashboard Enterprise Edition. For details, see [Scale](../nebula-dashboard-ent/4.cluster-operator/operator/scale.md). 
 
-You can also use NebulaGraph Operator to scale Graph and Storage services. For details, see [Deploy NebulaGraph clusters with Kubectl](../nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) and [Deploy NebulaGraph clusters with Helm](../nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
+You can also use NebulaGraph Operator to scale Graph and Storage services. For details, see [Scale a NebulaGraph Cluster](../k8s-operator/4.cluster-administration/4.3.scaling/4.3.1.resizing.md).
  {{ent.ent_end}}
 
 #### Add or remove disks in the Storage nodes
