--- a/docs-2.0/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
+++ b/docs-2.0/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
@@ -12,7 +12,7 @@ You can install the Enterprise Edition and Community Edition of NebulaGraph with
 - To install NebulaGraph with **NebulaGraph Dashboard Enterprise Edition**, see [Create a cluster](../../nebula-dashboard-ent/3.create-import-dashboard/1.create-cluster.md).
 {{ ent.ent_end }}
 
-- To install NebulaGraph with **NebulaGraph Operator**, see [Deploy NebulaGraph clusters with Kubectl](../../nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) or [Deploy NebulaGraph clusters with Helm](../../nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
+- To install NebulaGraph with **NebulaGraph Operator**, see [Customize installation defaults](../../k8s-operator/2.get-started/2.1.install-operator.md).
 
 {{ ent.ent_begin }}
 
