--- a/docs-2.0/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -125,9 +125,9 @@ By default, each NebulaGraph service gets configured from its configuration file
   1. In the `<install_path>/nebula-docker-compose/docker-compose.yaml` file, modify the configurations of the target service.
   2. In the `nebula-docker-compose` directory, run the command `docker-compose up -d` to restart the service involving configuration modifications.
 
-* For clusters installed with Kubectl
+* For clusters installed with NebulaGraph Operator
 
-  For details, see [Customize configuration parameters for a NebulaGraph cluster](../../nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md).
+  For details, see [Customize configuration parameters for a NebulaGraph cluster](../../k8s-operator/3.operator-management/3.1.customize-installation.md).
 
 ### Dynamically modifying configurations using command
 
