--- a/docs-2.0/9.about-license/2.license-management-suite/3.license-manager.md
+++ b/docs-2.0/9.about-license/2.license-management-suite/3.license-manager.md
@@ -2,7 +2,7 @@
 
 A License Manager (LM) is an essential service that runs on a server for you to manage your license and license the NebulaGraph enterprise edition database and its associated software. You can use an LM client that communicates with the LM service to load [license keys](2.license-center.md#license_key) and view license information, including the license validity period and purchased nodes. By configuring the LM service address in the NebulaGraph database and its associated software, the validity of the license can be verified to ensure the normal use of the NebulaGraph database and its associated software.
 
-This article introduces how to deploy and use an LM service in a Linux environment and how to configure it within the Nebula Graph database and its associated software. For information on how to deploy the LM in a K8s cluster, see [Deploy LM](../../nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md).
+This article introduces how to deploy and use an LM service in a Linux environment and how to configure it within the Nebula Graph database and its associated software. For information on how to deploy the LM in a K8s cluster, see [Deploy LM](../../k8s-operator/2.get-started/2.2.deploy-lm.md).
 
 ## Preparations
 
@@ -279,7 +279,7 @@ You can use monitoring tools to monitor the status of the LM service.
 
   !!! note
 
-        By default, LM uses port `9119`. If you need to change the port number, you can modify the value of the `Port` field in the LM configuration file above, or modify the value of `port` in the YAML file of [Deploying LM in K8s](../../nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md).
+        By default, LM uses port `9119`. If you need to change the port number, you can modify the value of the `Port` field in the LM configuration file above, or modify the value of `port` in the YAML file of [Deploying LM in K8s](../../k8s-operator/2.get-started/2.2.deploy-lm.md).
 
 
 
@@ -324,9 +324,8 @@ After the configuration is complete, run `./run_pagerank.sh` in the `scripts` fo
 
 ### Configure LM in NebulaGraph Operator
 
-- When deploying the cluster using Kubectl, configure the address and port of the LM through the `spec.metad.licenseManagerURL` field in the cluster configuration file. For more details, see [Deploying with Kubectl](../../nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md).
+When deploying the cluster using NebulaGraph Operator, configure the address and port of the LM through the `spec.metad.licenseManagerURL` field in the cluster configuration file. For more details, see [Install a NebulaGraph cluster](../../k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md).
 
-- When deploying the cluster using Helm, specify the address and port of the LM with `--set nebula.metad.licenseManagerURL`. For more details, see [Deploying with Helm](../../nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
 
 ## FAQ
 
