--- a/docs-2.0/k8s-operator/2.get-started/2.2.deploy-lm.md
+++ b/docs-2.0/k8s-operator/2.get-started/2.2.deploy-lm.md
@@ -1,9 +1,5 @@
 # Deploy LM
 
-!!! enterpriseonly
-
-    The LM service is only used to manage the NebulaGraph Enterprise license. If you are using the Community Edition of NebulaGraph, you do not need to deploy LM.
-
 Before deploying NebulaGraph Enterprise 3.5.0 or later using Operator, you first need to deploy [License Manager (LM)](../../9.about-license/2.license-management-suite/3.license-manager.md) and configure the NebulaGraph Enterprise [License](../../9.about-license/1.license-overview.md) in LM. LM is a standalone service used to manage the NebulaGraph license. LM checks the validity of the license when NebulaGraph Enterprise database starts. If the License is invalid, the database will not be able to start.
 
 ## Deployment instructions
@@ -31,14 +27,14 @@ For information on how to deploy LM on a machine outside the K8s cluster, see [L
 
 1. Create a namespace.
    
-  ```
+  ```bash
   # Create the nebula-license-manager namespace.
   kubectl create namespace nebula-license-manager
   ```
 
 2. Create a Secret for pulling the LM image from a private repository.
    
-  ```
+  ```bash
   kubectl -n nebula-license-manager create secret docker-registry <image-pull-secret> \
   --docker-server=DOCKER_REGISTRY_SERVER \
   --docker-username=DOCKER_USER \
@@ -52,7 +48,7 @@ For information on how to deploy LM on a machine outside the K8s cluster, see [L
 
 3. Create a StatefulSet resource configuration file for LM. Here is an example:
 
-  ```yml
+  ```yaml
   apiVersion: v1
   kind: Service
   metadata:
@@ -115,15 +111,34 @@ For information on how to deploy LM on a machine outside the K8s cluster, see [L
 
 4. Create LM.
 
-  ```
+  ```bash
   kubectl apply -f nebula-license-manager.yaml
   ```
 
 5. Verify that LM has been successfully deployed.
 
-  ```
+  ```bash
   kubectl -n nebula-license-manager get pods
   ```
+
+## Access LM
+
+You can access the License Manager (LM) through the created Service using the following command to get the IP and port of the LM Service:
+
+```bash
+kubectl -n nebula-license-manager get svc nebula-license-manager
+```
+
+Output:
+
+```bash
+NAME                     TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
+nebula-license-manager   ClusterIP   10.108.xxx.219   <none>        9119/TCP   37m
+```
+
+To access the LM within the cluster, you can use the `ClusterIP` type Service IP and port `9119`. For example, `10.108.xxx.219:9119`.
+
+Alternatively, you can access the LM using the domain name `<service-name>.<namespace>.svc.cluster.local` and port `9119`. For example, `nebula-license-manager.nebula-license-manager.svc.cluster.local:9119`.
 
 ## Monitor LM 
 
@@ -135,7 +150,7 @@ You can use monitoring tools, such as Dashboard Enterprise or Prometheus, to mon
 
 - Commands for managing the license using LM deployed within the K8s cluster are as follows:
 
-  ```
+  ```bash
   # View license information.
   kubectl -n nebula-license-manager exec -it nebula-license-manager-0 -- \
   /usr/local/nebula-license-manager/nebula-license-manager-cli info
@@ -150,8 +165,6 @@ You can use monitoring tools, such as Dashboard Enterprise or Prometheus, to mon
     /usr/local/nebula-license-manager/nebula-license-manager-cli usage
   ```
 
-## Next to do
+## What's next
 
-After deploying LM and loading the License Key, you need to configure the address and port of LM in the NebulaGraph Enterprise cluster through the `licenseManagerURL` parameter.
-
-For more information, see [Deploying Using Kubectl](3.1create-cluster-with-kubectl.md) or [Deploying Using Helm](3.2create-cluster-with-helm.md).
+After deploying LM and loading the License Key, you need to configure the address and port of LM in the NebulaGraph Enterprise cluster through the `licenseManagerURL` parameter. For more information, see [Create a cluster](2.3.create-cluster.md).
