--- a/docs-2.0/k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
@@ -19,10 +19,10 @@ In NebulaGraph Operator, you cannot directly edit PVC because Operator automatic
 - A StorageClass has been created in the Kubernetes environment. For details, see [Expanding Persistent Volumes Claims](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#expanding-persistent-volumes-claims).
   - Ensure the `allowVolumeExpansion` field in the StorageClass is set to `true`.
   - Make sure that the `provisioner` configured in the StorageClass supports dynamic expansion.
-- A NebulaGraph cluster has been created in Kubernetes. For specific steps, see [Create a Nebula Graph Cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md).
+- A NebulaGraph cluster is created in Kubernetes. For specific steps, see [Create a NebulaGraph cluster](../4.1.installation/4.1.1.cluster-install.md).
 - NebulaGraph cluster Pods are in running status.
 
-## Dynamic volume expansion example
+## Online volume expansion example
 
 In the following example, we assume that the StorageClass is named `ebs-sc` and the NebulaGraph cluster is named `nebula`. We will demonstrate how to dynamically expand the PV for the Storage service.
 
