--- a/docs-2.0/k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
@@ -6,7 +6,7 @@ You can also define the automatic deletion of PVCs to release data by setting th
 
 ## Prerequisites
 
-You have created a cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
+A NebulaGraph cluster is created in Kubernetes. For specific steps, see [Create a NebulaGraph cluster](../4.1.installation/4.1.1.cluster-install.md).
 
 
 ## Steps
@@ -101,3 +101,5 @@ The following example uses a cluster named `nebula` and the cluster's configurat
   ```
 
 3. Run `kubectl apply -f nebula_cluster.yaml` to push your configuration changes to the cluster.
+
+After setting `enablePVReclaim` to `true`, the PVCs of the cluster will be deleted automatically after the cluster is deleted. If you want to delete the PVs, you need to set the reclaim policy of the PVs to `Delete`. 
