--- a/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
@@ -2,17 +2,13 @@
 
 This article introduces how to back up and restore data of the NebulaGraph cluster on Kubernetes.
 
-!!! enterpriseonly
+!!! note
 
-    This feature is only for the enterprise edition NebulaGraph clusters on Kubernetes.
-
-!!! compatibility 
-
-    Make sure that the [Zone](../4.deployment-and-installation/5.zone.md) feature is not enabled in the NebulaGraph cluster before using the backup and restore in Operator, otherwise the backup and restore will fail. For details on Zones, see [Cluster with Zones](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md#create_clusters).
+    Make sure that the [zone](../../4.deployment-and-installation/5.zone.md) feature is not enabled in the NebulaGraph cluster before using the backup and restore in Operator, otherwise the backup and restore will fail. For details on zones, see [Cluster with zones](4.8.ha-and-balancing/4.8.2.enable-zone.md).
 
 ## Overview
 
-[NebulaGraph BR (Enterprise Edition), short for BR-ent](../backup-and-restore/nebula-br-ent/1.br-ent-overview.md) is a command line tool for data backup and recovery of NebulaGraph enterprise edition. NebulaGraph Operator utilizes the BR-ent tool to achieve data backup and recovery for NebulaGraph clusters on Kubernetes.
+[NebulaGraph BR (Enterprise Edition), short for BR-ent](../../backup-and-restore/nebula-br-ent/1.br-ent-overview.md) is a command line tool for data backup and recovery of NebulaGraph enterprise edition. NebulaGraph Operator utilizes the BR-ent tool to achieve data backup and recovery for NebulaGraph clusters on Kubernetes.
 
 When backing up data, NebulaGraph Operator creates a job to back up the data in the NebulaGraph cluster to the specified storage service.
 
@@ -47,7 +43,7 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
 - NebulaGraph Operator supports full and incremental backups.
 - During data backup, DDL and DML statements in the specified graph space will be blocked. We recommend performing the operation during off-peak hours, such as from 2:00 am to 5:00 am.
 - The cluster executing incremental backups and the cluster specified for the last backup must be the same, and the (storage bucket) path for the last backup must be the same.
-- Ensure that the time between each incremental backup and the last backup is less than a [`wal_ttl`](../5.configurations-and-logs/1.configurations/4.storage-config.md#raft_configurations).
+- Ensure that the time between each incremental backup and the last backup is less than a [`wal_ttl`](../../5.configurations-and-logs/1.configurations/4.storage-config.md#raft_configurations).
 - Specifying the backup data of a specified graph space is not supported.
 - Before backing up data, you need to create a Secret to restore the credential for pulling the image of the BR-ent tool.
   
@@ -142,7 +138,7 @@ The main parameters are described as follows:
 | `spec.parallelism` |1  |The number of tasks executed in parallel. |
 | `spec.ttlSecondsAfterFinished` | 60 | The time to keep task information after the task is completed. |
 | `spec.template.spec.containers[0].image` | `vesoft/br-ent:{{br_ent.release}}`|The image address of the NebulaGraph BR Enterprise Edition tool. |
-| `spec.template.spec.containers[0].command`| - |  The command for backing up data to the storage service compatible with the S3 protocol.<br/>For descriptions of the options in the command, see [Parametr description](../backup-and-restore/nebula-br-ent/3.backup-data.md#_13). |
+| `spec.template.spec.containers[0].command`| - |  The command for backing up data to the storage service compatible with the S3 protocol.<br/>For descriptions of the options in the command, see [Parametr description](../../backup-and-restore/nebula-br-ent/3.backup-data.md#_13). |
  
 
 For more settings of the job, see [Kubernetes Jobs](https://kubernetes.io/docs/concepts/workloads/controllers/job/).
@@ -162,7 +158,7 @@ If you enable mTLS authentication for the NebulaGraph cluster, you need to certi
 
 !!! note
 
-    Create Secrets to store the certificate files before creating the backup job, and make sure the Secrets are in the namespace where the backup job is located. For details, see [Enable mTLS in NebulaGraph](8.custom-cluster-configurations/8.5.enable-ssl.md).
+    Create Secrets to store the certificate files before creating the backup job, and make sure the Secrets are in the namespace where the backup job is located. For details, see [Enable mTLS in NebulaGraph](4.7.security/4.7.1.enable-mtls.md).
 
 The following provides an example of the YAML file for a full backup job with mTLS authentication enabled:
 
@@ -335,6 +331,3 @@ NAME     GRAPHD-DESIRED   GRAPHD-READY   METAD-DESIRED   METAD-READY   STORAGED-
 nebula   1                1              1               1             3                  3                2d3h
 ngxvsm   1                1              1               1             3                  3                92m  # The newly created cluster.
 ```
-
-
-
