--- a/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
@@ -4,11 +4,11 @@ NebulaGraph Operator calls the interface provided by NebulaGraph clusters to dyn
 
 ## Prerequisites
 
-[Install NebulaGraph Operator](2.deploy-nebula-operator.md)
+[Install NebulaGraph Operator](../../2.get-started/2.1.install-operator.md)
 
 ## Steps
 
-1. Create a NebulaGraph cluster. For more information, see [Deploy NebulaGraph clusters with Kubectl](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) or [Deploy NebulaGraph clusters with Helm](3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md).
+1. Create a NebulaGraph cluster. For more information, see [Create a NebulaGraph clusters](../4.1.installation/4.1.1.cluster-install.md).
 
 2. Delete the Pod named `<cluster_name>-storaged-2` after all pods are in the `Running` status.
 
