--- a/docs-2.0/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
@@ -1,4 +1,4 @@
-# NebulaGraph cluster rolling update strategy
+# Optimize leader transfer in rolling updates
 
 NebulaGraph clusters use a distributed architecture to divide data into multiple logical partitions, which are typically evenly distributed across different nodes. In distributed systems, there are usually multiple replicas of the same data. To ensure the consistency of data across multiple replicas, NebulaGraph clusters use the Raft protocol to synchronize multiple partition replicas. In the Raft protocol, each partition elects a leader replica, which is responsible for handling write requests, while follower replicas handle read requests.
 
@@ -19,7 +19,7 @@ In the YAML file for creating a cluster instance, add the `spec.storaged.enableF
 
 When `enableForceUpdate` is set to `true`, it means that the partition leader replicas will not be migrated, thus speeding up the rolling update process. Conversely, when set to `false`, it means that the leader replicas will be migrated to other nodes to ensure the read and write availability of the cluster. The default value is `false`.
 
-!!! caution
+!!! warning
   
     When setting `enableForceUpdate` to `true`, make sure there is no traffic entering the cluster for read and write operations. This is because this setting will force the cluster pods to be rebuilt, and during this process, data loss or client request failures may occur.
 
@@ -30,8 +30,9 @@ Configuration example:
 spec:
 ...
   storaged:
-    enableForceUpdate: true // When set to true, it speeds up the rolling update process.
+    # When set to true,
+    # it means that the partition leader replicas will not be migrated,
+    # but the cluster pods will be rebuilt directly.
+    enableForceUpdate: true 
     ...
 ```
-
-
