--- a/docs-2.0/k8s-operator/5.FAQ.md
+++ b/docs-2.0/k8s-operator/5.FAQ.md
@@ -19,7 +19,7 @@ They are different concepts. A replica in the Operator docs indicates a pod repl
 
 ## How to view the logs of each service in the NebulaGraph cluster?
 
-The logs for the NebulaGraph cluster are not gathered in the K8s cluster, which also means that they cannot be retrieved through the `kubectl logs` command. To obtain the logs of each cluster service, you need to access the container and view the log files that are stored inside. This is the only option available for users to get the service logs individually in the NebulaGraph cluster.
+To obtain the logs of each cluster service, you need to access the container and view the log files that are stored inside.
 
 Steps to view the logs of each service in the NebulaGraph cluster:
 
