--- a/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md
@@ -8,7 +8,7 @@ You can define whether to balance data automatically or not with the parameter `
 
 ## Prerequisites
 
-You have created a NebulaGraph cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
+A NebulaGraph cluster is created. For details, see [Create a NebulaGraph cluster](../4.1.installation/4.1.1.cluster-install.md). 
 
 ## Steps
 
