--- a/docs-2.0/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -78,7 +78,7 @@ The following example shows how to enable AdmissionWebhook when you install Nebu
 helm install nebula-operator nebula-operator/nebula-operator --namespace=<nebula-operator-system> --set admissionWebhook.create=true
 ```
 
-Check whether the specified configuration of NebulaGraph Operator is updated successfully:
+Check whether the specified configuration of NebulaGraph Operator is installed successfully:
 
 ```bash
 helm get values nebula-operator -n <nebula-operator-system>
